feat: 팀 생성 시 수업 정보도 저장되도록 변경